force-app/main/default/objects/sObject_Trigger_Action__mdt/fields/Bypass_Handler__c.field-meta.xml
<CustomField>
    <fullName>Bypass_Handler__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bypass Handler</label>
    <type>Checkbox</type>
</CustomField>