force-app/main/default/objects/sObject_Trigger_Action__mdt/fields/Bypass_User__c.field-meta.xml
<CustomField>
    <fullName>Bypass_User__c</fullName>
    <label>Bypass User</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>