force-app/main/default/objects/sObject_Trigger_Action__mdt/fields/Handler_Class_Name__c.field-meta.xml
<CustomField>
    <fullName>Handler_Class_Name__c</fullName>
    <label>Handler Class Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>