force-app/main/default/objects/sObject_Trigger_Action__mdt/fields/sObject_Trigger_Setting__c.field-meta.xml
<CustomField>
    <fullName>sObject_Trigger_Setting__c</fullName>
    <label>sObject Trigger Setting</label>
    <referenceTo>sObject_Trigger_Setting__mdt</referenceTo>
    <relationshipLabel>sObject Trigger Actions</relationshipLabel>
    <relationshipName>sObject_Trigger_Actions</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>